# OpenSC

./: Makefile.am  Makefile.mak  OpenSC_win32.msi  README.txt
doc/: Makefile.am
src/common/: Makefile.am  Makefile.mak
src/libopensc/: Makefile.am  Makefile.mak  card-openpgp-2.c  card-openpgp-3.c  card-openpgp-4.c  card-openpgp-5.c  card-openpgp-6.c  card-openpgp-7.c  card-openpgp-8.c  card-openpgp-9.c  card-openpgp-a.c  card-openpgp-b.c  card-openpgp.c  card-openpgp.h  card.c  cardctl.h  cards.h  ctx.c  libopensc.exports  opensc.h  pkcs15-openpgp-2.c  pkcs15-openpgp-3.c  pkcs15-openpgp-4.c  pkcs15-openpgp-5.c  pkcs15-openpgp-6.c  pkcs15-openpgp-7.c  pkcs15-openpgp-8.c  pkcs15-openpgp-9.c  pkcs15-openpgp-a.c  pkcs15-openpgp-b.c  pkcs15-openpgp.c  pkcs15-syn.c  pkcs15-syn.h  reader-pcsc.c
src/pkcs11/: slot.c
src/pkcs15init/: Makefile.am  Makefile.mak  openpgp-2.profile  openpgp-3.profile  openpgp-4.profile  openpgp-5.profile  openpgp-6.profile  openpgp-7.profile  openpgp-8.profile  openpgp-9.profile  openpgp-a.profile  openpgp-b.profile  pkcs15-init.h  pkcs15-lib.c  pkcs15-openpgp-2.c  pkcs15-openpgp-3.c  pkcs15-openpgp-4.c  pkcs15-openpgp-5.c  pkcs15-openpgp-6.c  pkcs15-openpgp-7.c  pkcs15-openpgp-8.c  pkcs15-openpgp-9.c  pkcs15-openpgp-a.c  pkcs15-openpgp-b.c  pkcs15.profile  profile.c
src/tests/regression/: functions
src/tests/unittests/: openpgp-tool.c
src/tools/: openpgp-tool-helpers.c  org.opensc-project.mac.opensc-notify.plist  org.opensc-project.mac.pkcs11-register.plist
win32/: Make.rules.mak
